--- a/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
+++ b/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
@@ -9,58 +9,57 @@
           <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
           
         </mat-form-field>
-        <button mat-raised-button (click)="agregar()" style="margin-left: 2%;">Agregar</button>
+        <button mat-raised-button (click)="agregar()" style="margin-left: 2%;min-width: 8%;">Agregar</button>
         <button mat-raised-button (click)="downloadPdf()" style="margin-left: 2%;">PDF</button>
         <button mat-raised-button (click)="downloadExcel()" style="margin-left: 2%;">Excel</button>
-
+        
     </div>
+      <div class="tableDiv">
+    <mat-table #table [dataSource]="dataSource" class="table">
+  
       
-    <mat-table #table [dataSource]="dataSource" style="background-color: aliceblue;">
-  
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-  
-      <!-- Name Column -->
+      
       <ng-container matColumnDef="nombre">
         <mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>
         <mat-cell *matCellDef="let element"> {{element.nombre| uppercase}} </mat-cell>
       </ng-container>
   
-      <!-- Weight Column -->
+     
       <ng-container matColumnDef="precio">
         <mat-header-cell *matHeaderCellDef> Precio </mat-header-cell>
         <mat-cell *matCellDef="let element"> 
-          {{element.precio| number:'1.2-2'}} $ </mat-cell>
+          {{element.precio| number:'1.2-2'|currency:"EUR"}}  </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="genero" >
+        <mat-header-cell *matHeaderCellDef style="width: 10%;"> genero </mat-header-cell>
+        <mat-cell *matCellDef="let element"> 
+          {{element.genero.nombre}}  </mat-cell>
       </ng-container>
   
-      <!-- Symbol Column -->
+      
       <ng-container matColumnDef="plataformas">
         <mat-header-cell *matHeaderCellDef> Plataformas </mat-header-cell>
         <mat-cell *matCellDef="let element"> 
           {{element.plataformas}}
 
           
-          <!-- <div *ngIf="(element.plataforma2 && element.plataforma3) == '' ">{{element.plataforma1}}</div>
-          <div *ngIf="((element.plataforma3) == '') && ((element.plataforma2) != '') ">{{element.plataforma1}},{{element.plataforma2}}</div>
-          <div *ngIf="(element.plataforma2 && element.plataforma3) != '' ">{{element.plataforma1}},{{element.plataforma2}}
-            ,{{element.plataforma3}}
-          </div> -->
-          
+       
           
         </mat-cell>
       </ng-container>
       
       <ng-container matColumnDef="options">
         <mat-header-cell *matHeaderCellDef> options </mat-header-cell>
-        <mat-cell *matCellDef="let element"> 
+        <mat-cell *matCellDef="let element" style="margin-right: 1%;"> 
         
-        <button mat-button class="btn-edit" title="edit" (click)="edit(element)">
+        <button mat-button class="btn" title="edit" (click)="edit(element)">
           <mat-icon style="color: black;">edit</mat-icon>
         </button> 
-        <button mat-button class="btn-detalle" title="open" (click)="detalle(element)">
+        <button mat-button class="btn" title="open" (click)="detalle(element)">
             <mat-icon style="color: #3f51b5;">visibility</mat-icon>
         </button>
-        <button mat-button class="btn-delete" title="close"  (click)="delete(element)">
+        <button mat-button class="btn" title="close"  (click)="delete(element)">
             <mat-icon style="color: red;">delete</mat-icon>
         </button>
         
@@ -72,4 +71,5 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
+  </div>
   </div>
